kube_manifest/announcement-database.yaml
kind: Service
apiVersion: v1
metadata:
  creationTimestamp: null
  name: announcement-database
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: announcement-database
    database: announcement-database
status:
  loadBalancer: {}
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  creationTimestamp: null
  labels:
    run: announcement-database
    database: announcement-database
  name: announcement-database
spec:
  replicas: 1
  selector:
    matchLabels:
      run: announcement-database
      database: announcement-database
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: announcement-database
        database: announcement-database
    spec:
      containers:
      - image: mongo
        imagePullPolicy: IfNotPresent
        name: member-database
        ports:
        - containerPort: 27017
        resources: {}
status: {}
