kube_manifest/budget-pod.yaml
kind: Service
apiVersion: v1
metadata:
  creationTimestamp: null
  name: budget-service
spec:
  type: NodePort      
  ports:
  - port: 8050
    protocol: TCP
    nodePort: 30331
    targetPort: 8050
  selector:
    
    service: budget-service
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: budget-pod
  name: budget-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      run: budget-pod
      service: budget-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: budget-pod
        service: budget-service
    spec:
      containers:
      - image: muhammadhanzala/portal-budget-svc:v1
        name: budget-pod
        ports:
        - containerPort: 8030
        resources: {}
status: {}
