kube_manifest/message-pod.yaml
kind: Service
apiVersion: v1
metadata:
  creationTimestamp: null
  name: message-service
spec:
  ports:
  - port: 8020
    protocol: TCP
    targetPort: 8020
  selector:
    service: message-service
  type: NodePort  
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: message-pod
  name: message-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      run: message-pod
      service: message-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: message-pod
        service: message-service
    spec:
      containers:
      - image: muhammadhanzala/portal-message-svc:v1
        name: member-pod
        ports:
        - containerPort: 8020
        resources: {}
status: {}
